welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:11: error: illegal start of simple expression
else
^